test/corpus/field_access.txt
================================================================================
simple field access
================================================================================
obj.field
--------------------------------------------------------------------------------
(source_file
  (navigation_expression
    (identifier)
    (navigation_suffix
      (identifier))))

================================================================================
safe navigation field access
================================================================================
obj?.field
--------------------------------------------------------------------------------
(source_file
  (navigation_expression
    (identifier)
    (navigation_suffix
      (identifier))))

================================================================================
chained field access
================================================================================
obj.field1.field2
--------------------------------------------------------------------------------
(source_file
  (navigation_expression
    (navigation_expression
      (identifier)
      (navigation_suffix
        (identifier)))
    (navigation_suffix
      (identifier))))

================================================================================
field access with method call
================================================================================
obj.field.method()
--------------------------------------------------------------------------------
(source_file
  (call_expression
    (navigation_expression
      (navigation_expression
        (identifier)
        (navigation_suffix
          (identifier)))
      (navigation_suffix
        (identifier)))
    (call_suffix
      (value_arguments))))

================================================================================
array access after field
================================================================================
obj.array[0]
--------------------------------------------------------------------------------
(source_file
  (indexing_expression
    (navigation_expression
      (identifier)
      (navigation_suffix
        (identifier)))
    (indexing_suffix
      (decimal_integer_literal))))

================================================================================
nested safe navigation
================================================================================
obj?.field?.subfield
--------------------------------------------------------------------------------
(source_file
  (navigation_expression
    (navigation_expression
      (identifier)
      (navigation_suffix
        (identifier)))
    (navigation_suffix
      (identifier))))

================================================================================
field access on function result
================================================================================
getObject().field
--------------------------------------------------------------------------------
(source_file
  (navigation_expression
    (call_expression
      (identifier)
      (call_suffix
        (value_arguments)))
    (navigation_suffix
      (identifier))))

================================================================================
this field access
================================================================================
this.field
--------------------------------------------------------------------------------
(source_file
  (navigation_expression
    (this_expression)
    (navigation_suffix
      (identifier))))

================================================================================
super field access
================================================================================
super.field
--------------------------------------------------------------------------------
(source_file
  (navigation_expression
    (super_expression)
    (navigation_suffix
      (identifier))))

================================================================================
qualified this field access
================================================================================
this@OuterClass.field
--------------------------------------------------------------------------------
(source_file
  (navigation_expression
    (this_expression
      (type_identifier))
    (navigation_suffix
      (identifier))))


================================================================================
backticked field access
================================================================================
obj.`field-name`
--------------------------------------------------------------------------------
(source_file
  (navigation_expression
    (identifier)
    (navigation_suffix
      (identifier))))